srv/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hockey-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  hockey-server
  template:
    metadata:
      labels:
        app:  hockey-server
    spec:
      containers:
        - name:  hockey-server
          image: hockey-server:0.0.2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: udp
              containerPort: 8081
              protocol: UDP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 512Mi
