srv/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-hockey-server
  labels:
    app: hockey-server
spec:
  type: ClusterIP
  selector:
    app: hockey-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: udp
      protocol: UDP
      port: 8081
      targetPort: 8081
